Implement 2-column lib - version menu

--- a/src/common.blocks/menu-wrapper/menu-wrapper.styl
+++ b/src/common.blocks/menu-wrapper/menu-wrapper.styl
@@ -1,5 +1,16 @@
 .menu-wrapper
 {
-  padding-top: 60px;
-  width: 250px;
+  margin-top: 50px;
+  width: 200px;
+  height: 100%;
+
+  display: inline-block;
+  vertical-align: top;
+
+  border-right: 1px solid #ddd;
+}
+
+.menu-wrapper .menu_theme_normal.menu_size_m
+{
+  padding: 0;
 }
