--- a/src/common.blocks/header/header.styl
+++ b/src/common.blocks/header/header.styl
@@ -1,7 +1,8 @@
 .header
 {
-  position: fixed;
   width: 100%;
-  height: 50px;
+  height: 35px;
+  position: fixed;
+  padding-left: 10px;
   background: rgba(84, 83, 85, 0.7);
 }
