Implement lib page and version display in new way

--- a/src/common.blocks/header/header.styl
+++ b/src/common.blocks/header/header.styl
@@ -4,5 +4,12 @@
   height: 35px;
   position: fixed;
   padding-left: 10px;
-  background: rgba(84, 83, 85, 0.7);
+  background: #333;
+}
+
+.header .button
+{
+  float: right;
+  margin-right: 20px;
+  margin-top: 3px;
 }
