--- a/src/common.blocks/panel/panel.styl
+++ b/src/common.blocks/panel/panel.styl
@@ -1,6 +1,6 @@
 .panel
 {
-  min-width: 500px;
-  max-width: 900px;
-  background-color: #007700;
+  border: 1px solid #333;
+  margin-bottom: 10px;
+  border-radius: 3px;
 }
